--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,10 +6,12 @@ import '../styles/global.css'
 export interface Props {
   title: string
   description: string
-  permalink: string
+  permalink: string,
+  slug: string
 }
 
-const { title, description, permalink } = Astro.props
+const { title, description, permalink, slug } = Astro.props
+const socialUrl = `${Astro.site.href}assets/blog/${slug}.jpg`
 ---
 
 <!-- Global Metadata -->
@@ -27,12 +29,14 @@ const { title, description, permalink } = Astro.props
 <meta property="og:url" content={permalink} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
+<meta property="og:image" content={socialUrl} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={permalink} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={socialUrl} />
 
 <ClientRouter />
 
