--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,13 +8,14 @@ export interface Props {
   description: string;
   permalink: string;
   current?: string;
-  slug: string;
+  slug?: string;
+  image?: string;
 }
-const { title, description, permalink, current, slug } = Astro.props;
+const { title, description, permalink, current, slug, image } = Astro.props;
 ---
 <html lang="en">
 <head>
-  <BaseHead title={title} description={description} permalink={permalink} slug={slug} />
+  <BaseHead title={title} description={description} permalink={permalink} slug={slug} image={image} />
 </head>
 <body>
   <div class="layout">
