--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,11 +34,11 @@ const socialUrl = image ?? (slug ? `${Astro.site.href}assets/blog/${slug}.jpg` :
 <meta property="og:image" content={socialUrl} />
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={permalink} />
-<meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={socialUrl} />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content={permalink} />
+<meta name="twitter:title" content={title} />
+<meta name="twitter:description" content={description} />
+<meta name="twitter:image" content={socialUrl} />
 
 <ClientRouter />
 
