--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -15,7 +15,7 @@ export async function getStaticPaths() {
 const { post } = Astro.props
 const { title, slug, description, publishDate } = post.data;
 const readingTimeEstimate = readingTime(post.body).text
-const permalink = `${Astro.site.href}/${slug}`;
+const permalink = `${Astro.site.href}${slug}`;
 const { Content } = await render(post)
 ---
 
