--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -30,7 +30,7 @@ const { Content } = await render(post)
       <img
         width="860"
         height="510"
-        src={`/assets/blog/${post.data.slug}.jpg`}
+        src={`/assets/blog/${post.data.slug}.jpg?v=1`}
         alt=""
       />
     )}
