include bio on all pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,9 @@
+---
+import Bio from '../components/Bio.astro';
+---
+<div class="container">
+<Bio />
+</div>
 <footer>
   <span>
     &copy; {new Date().getFullYear()} [placeholder].
