--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -65,6 +65,7 @@ const { current = '' } = Astro.props;
 
 <nav>
   <a class={current === "blog" ? "selected" : ""} href="/">Blog</a>
+  <a class={current === "projects" ? "selected" : ""} href="/projects">Projects</a>
   <a class={current === "about" ? "selected" : ""} href="/about">About</a>
   <div class="theme-toggle-container">
     <ThemeToggleButton client:load />
