--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,15 @@ const { current = '' } = Astro.props;
     padding: 2em;
     width: 100%;
   }
+
+  @media screen and (max-width: 720px) {
+    header {
+      align-items: center;
+      flex-direction: column;
+      gap: 1.25em;
+      padding: 1.25em 1.5em;
+    }
+  }
 </style>
 
 <header>
