--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -2,6 +2,7 @@
 import { getCollection, render } from 'astro:content'
 import readingTime from 'reading-time'
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Bio from '../components/Bio.astro';
 export async function getStaticPaths() {
 	const posts = await getCollection('posts')
   return posts.map(p => ({
@@ -9,14 +10,12 @@ export async function getStaticPaths() {
     props: { post: p },
   }));
 }
-
 const { post } = Astro.props
 const { title, slug, description, publishDate } = post.data;
 const readingTimeEstimate = readingTime(post.body).text
 const permalink = `${Astro.site.href}${slug}`;
 const { Content } = await render(post)
 ---
-
 <BaseLayout title={title} description={description} permalink={permalink} current="blog" slug={slug}>
   <header>
     <p>{publishDate} ~ {readingTimeEstimate}</p>
@@ -35,25 +34,22 @@ const { Content } = await render(post)
     <article class="content">
       <Content />
     </article>
+    <Bio />
   </div>
 </BaseLayout>
-
 <style>
   header {
     text-align: center;
   }
-
   header h1 {
     margin-bottom: 0.7em;
   }
-
   header p {
     color: var(--text-secondary);
     text-transform: uppercase;
     font-family: var(--font-family-sans);
     font-weight: 600;
   }
-
   header hr {
     min-width: 100px;
     width: 30%;
